// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeviceSettings /> - snapshot renders DeviceSettings, with initializeValueFromStore 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "elevation": 2,
        "marginHorizontal": 20.83275,
        "marginTop": 10.416375,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.23,
        "shadowRadius": 2,
        "width": 708.3345,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 20.83275,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#8e8e93",
            "fontSize": 34.12500000000001,
          },
          undefined,
        ]
      }
    >
      House code
    </Text>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#8e8e93",
          "borderRadius": 2,
          "borderWidth": 1,
          "color": "#555555",
          "fontSize": 30,
          "marginLeft": 20.83275,
          "padding": 5,
          "width": 225,
        }
      }
      underlineColorAndroid="transparent"
      value="12"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 20.83275,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#8e8e93",
            "fontSize": 34.12500000000001,
          },
          undefined,
        ]
      }
    >
      Unit code
    </Text>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#8e8e93",
          "borderRadius": 2,
          "borderWidth": 1,
          "color": "#555555",
          "fontSize": 30,
          "marginLeft": 20.83275,
          "padding": 5,
          "width": 225,
        }
      }
      underlineColorAndroid="transparent"
      value="4"
    />
  </View>
</View>
`;

exports[`<DeviceSettings /> - snapshot renders DeviceSettings, without initializeValueFromStore 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "elevation": 2,
        "marginHorizontal": 20.83275,
        "marginTop": 10.416375,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.23,
        "shadowRadius": 2,
        "width": 708.3345,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 20.83275,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#8e8e93",
            "fontSize": 34.12500000000001,
          },
          undefined,
        ]
      }
    >
      House code
    </Text>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#8e8e93",
          "borderRadius": 2,
          "borderWidth": 1,
          "color": "#555555",
          "fontSize": 30,
          "marginLeft": 20.83275,
          "padding": 5,
          "width": 225,
        }
      }
      underlineColorAndroid="transparent"
      value="13"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 20.83275,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#8e8e93",
            "fontSize": 34.12500000000001,
          },
          undefined,
        ]
      }
    >
      Unit code
    </Text>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#8e8e93",
          "borderRadius": 2,
          "borderWidth": 1,
          "color": "#555555",
          "fontSize": 30,
          "marginLeft": 20.83275,
          "padding": 5,
          "width": 225,
        }
      }
      underlineColorAndroid="transparent"
      value="5"
    />
  </View>
</View>
`;
